# everafter

./: README.md  package.json  pnpm-lock.yaml  pnpmfile.js  rush.json  tsconfig.json  webpack.config.js
book/: book.toml  data-structure.md
book/src/: SUMMARY.md  chapter_1.md
docs/: 404.html  chapter_0.html  chapter_1.html  data-structure.md  highlight.js  index.html  print.html  searchindex.js  searchindex.json
docs/custom/: init.js  style.css
main/everafter/: .eslintrc.js  .prettierrc.js  README.md  package.json  pnpm-lock.yaml  pnpmfile.js  (+2 more)
rust/: .gitignore  Cargo.toml  README.md
rust/book/: book.toml
rust/book/src/: SUMMARY.md  chapter_0.md
rust/book/src/theme/: index.hbs
rust/book/src/theme/css/: general.css
rust/crates/everafter-function/: Cargo.toml
rust/crates/everafter-function/src/: args.rs  lib.rs  ret.rs
rust/src/: lib.rs
rust/src/inputs/: cell.rs  computation.rs  derived.rs  function.rs  inputs.rs  iterable.rs  mod.rs  reactive.rs
rust/src/outputs/: mod.rs  primitive.rs
rust/src/tests/: primitive.rs
rust/src/timeline/: compute_stack.rs  dyn_id.rs  evaluation_context.rs  id.rs  inputs.rs  mod.rs  partition.rs  revision.rs  timeline.rs
rust/tests/: function.rs  list.rs  primitive.rs
rust/tests/common/: mod.rs  reactive.rs
src/: block-internals.ts  block-primitives.ts  block.md  block.ts  builder.ts  debug.ts  index.ts  interfaces.ts  ops.ts  output.ts  primitives.md  program.ts  region.ts  root.ts  stack.ts  tsconfig.json  unsafe.ts  update.ts  utils.ts  value.ts
tests/: helpers.ts  index.ts  tsconfig.json  update.ts
(+52 files in other folders)
