[package]
name = "everafter"
version = "0.1.0"
authors = ["Yehuda Katz <wycats@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-new = '0.5.8'
derive_more = '0.99.10'
getset = '0.1.1'
thread_local = "1.0.1"
parking_lot = "0.11.0"
atomig = { version = "0.2.0", features = ["derive"] }
indexmap = "1.6.0"
fxtypemap = "0.1.1"
uuid = { version = "0.8.1", features = ["v4"] }
itertools = "0.9.0"

[dev-dependencies]
itertools = "0.9.0"
